added few definitions and propositions in quotient spaces section and homotopy section

--- a/topology-and-groups/topology-and-groups-math0074.tex
+++ b/topology-and-groups/topology-and-groups-math0074.tex
@@ -269,6 +269,16 @@ the site on Topology and Groups by Prof. Jonny Evans.
   $X^{(0)}\subseteq X^{(1)}\subseteq\ldots$ is called the \emph{cell decomposition} of $X$.
 \end{definition}
 
+\begin{definition}
+  The suspension $SX$ of a space $X$ is the space
+  \[SX=X\times I/\sim\] where $(x,t)\sim (x',t')$ if and only if $(x,t)=(x',t')$ or 
+  $t=t'=1$ or $t=t'=0$.
+\end{definition}
+
+\begin{proposition}
+  $SS^n$ is homeomorphic to $S^{n+1}$. $SD^n$ is homeomorphic to $D^{n+1}$.
+\end{proposition}
+
 \begin{definition}[Presentation complex]
   text
 \end{definition}
@@ -323,6 +333,21 @@ the site on Topology and Groups by Prof. Jonny Evans.
 
 \begin{proposition}
   $\mathbb{R}^n\setminus pt\simeq S^{n-1}$
+\end{proposition}
+
+\begin{proposition}
+  If $f:X\rightarrow S^2$ is a non-surjective map then $f$ is homotopic to a constant 
+  map.
+\end{proposition}
+
+\begin{definition}
+  The cone $CX$ on a space $X$ is the space
+  \[CX=X\times I/\sim\] where $(x,t)\sim(x',t')$ if and only if $(x,t)=(x',t')$ or 
+  $t=t'=1$.
+\end{definition}
+
+\begin{proposition}
+  $CX$ is always contractible.
 \end{proposition}
 
 \begin{proposition}
