--- a/topology-and-groups/topology-and-groups-math0074.tex
+++ b/topology-and-groups/topology-and-groups-math0074.tex
@@ -516,4 +516,6 @@ the site on Topology and Groups by Prof. Jonny Evans.
   \[\pi_1(X,x_0)=\{h:X'\rightarrow X'\,|\,p\circ h =p\}\]
 \end{theorem}
 
+\[5\overset{POG}{=}5\]
+
 \end{document}
